# anticipatio

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_test.yml
data/: README.md  futurists.csv  topic_info.csv  tweets.csv  tweets_and_replies.csv
data/futurists_koe/: 2023_03_09_The Key Opinion Leaders anticipating the future.txt  README.md  generate.ipynb  generate.py
data/futurists_kol/: KOL_list_cleaned.csv
data/futurists_new/: 2023_02_16_A_list_of_tech_and_future_KOE.txt
data/futurists_rossdawson/: README.md  futurists.txt  generate.py
data/futurists_tweets/: 2023_02_16_A_list_of_tech_and_future_KOE.txt  Blazing_Science.csv  Competia.csv  CultureofFuture.csv  DavidBrin.csv  ErOrange.csv  Futur1st.csv  FuturistGraeme.csv  Garf.csv  GeniusWorks.csv  Geofutures.csv  GlenHiemstra.csv  GreatDismal.csv  JeremyRifkin.csv  KarlSchroeder.csv  KristinaDryza.csv  LisaBodell.csv  LiselotteLyngso.csv  Louise.csv  MadelineAshby.csv  Mandarapte108.csv  Millennia2015.csv  PeterDiamandis.csv  README.md  RielM.csv  (+71 more)
examples/: FrameNet_anticipation.ipynb  analysis_hashtags.ipynb  covid_emotions.csv  emusk_tweets.ipynb  futurists_tweets.ipynb
src/: 100_topics.csv  25_topics.csv  30_topics.csv  BERTopic.ipynb  BERTopic_Online.ipynb  Emotions.ipynb  LDA_optimized.ipynb  NetworkGraph.ipynb  UserTopics.ipynb  account_list.txt  account_list2.txt  bertopic-future-influencers.ipynb  bertopic-online.ipynb  emotions.csv  sentiment_stats.xlsx  testing_order.py  topics_analysis.ipynb  user2topic.csv
tests/: test_dataset.py
(+337 files in other folders)
