[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "anticipatio"
authors = [
    {name = "Maciej Skorski", },
    {name = "Alina Landowska", },
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["NLP", "anticipation"]
license = {text = "MIT"}

dependencies = [
    "pytest",
]